--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,7 +15,8 @@
             <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Contact Us</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
@@ -25,8 +26,8 @@
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar </h4>
-                <div class='button-box'>
-                <a class='book' href="contactus.html"> Book Now </a>
+                <div class="button-box">
+                <a class="book" href="rates.html"> Book Now </a>
                 </div>
             </section>
         </div>
