--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -119,9 +119,10 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Blog Page</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="https://tinyurl.com/28tczlnd" alt="page 2 wireframe"> 
+
   </main>
 </body>
 
