added the 6 pictures of me

--- a/resume/site-plan.html
+++ b/resume/site-plan.html
@@ -134,8 +134,8 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="/Users/gehrig/Downloads/pic1.jpg" alt="me with a hat">
+        <img src="/Users/gehrig/Downloads/pic2.jpg" alt="spongebob shirt">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -143,8 +143,8 @@
         [Written copy for the Page 2 here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="/Users/gehrig/Downloads/pic3.jpg" alt="me on a ride">
+        <img src="/Users/gehrig/Downloads/pic6.jpg" alt="flower garden pic">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -152,8 +152,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="/Users/gehrig/Downloads/pic4.jpg" alt="temple pic">
+        <img src="/Users/gehrig/Downloads/pic5.jpg" alt="suit pic">
 
       </ul>
       <hr>
