--- a/resume/site-plan.html
+++ b/resume/site-plan.html
@@ -138,9 +138,9 @@
         <img src="/Users/gehrig/Downloads/pic2.jpg" alt="spongebob shirt">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[resume]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [Written copy for the resume here]
       </p>
       <p>Images for the Page 2</p>
         <img src="/Users/gehrig/Downloads/pic3.jpg" alt="me on a ride">
@@ -149,9 +149,9 @@
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        [Written copy for the about me here]
       </p>
-      <p>Images for the Page 3</p>
+      <p>Images for the about me</p>
         <img src="/Users/gehrig/Downloads/pic4.jpg" alt="temple pic">
         <img src="/Users/gehrig/Downloads/pic5.jpg" alt="suit pic">
 
