--- a/resume/site-plan.html
+++ b/resume/site-plan.html
@@ -147,7 +147,7 @@
         <img src="/Users/gehrig/Downloads/pic6.jpg" alt="flower garden pic">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>[about me]</h3>
       <p>
         [Written copy for the about me here]
       </p>
@@ -169,13 +169,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>[resume]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>[about me]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
