added everything for my second page on wwr

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -121,7 +121,7 @@
 
     <h3>Blog Page</h3>
 
-    <img src="https://tinyurl.com/28tczlnd" alt="page 2 wireframe"> 
+    <img src="images/blog-site-plan.png" alt="page 2 wireframe"> 
 
   </main>
 </body>
