--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,7 @@
             </a>
             <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="blog.html">Blog</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
             </nav>
@@ -56,7 +56,7 @@
             </section>
         </main>
         <footer>
-            <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+            <p>Dry Oar &copy; 2025 - Gehrig Sproul</p>
             <p><a href="site-plan-rafting.html">Site Plan</a></p>
             <p><a href="contactus.html">Contact Us</a></p>
             <div class="social">
