put in my wireframes

--- a/resume/site-plan.html
+++ b/resume/site-plan.html
@@ -134,8 +134,8 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="/Users/gehrig/Downloads/pic1.jpg" alt="me with a hat">
-        <img src="/Users/gehrig/Downloads/pic2.jpg" alt="spongebob shirt">
+        <img src="images/pic1.jpg" alt="me with a hat">
+        <img src="images/pic2.jpg" alt="spongebob shirt">
 
       </ul>
       <h3>[resume]</h3>
@@ -143,8 +143,8 @@
         [Written copy for the resume here]
       </p>
       <p>Images for the Page 2</p>
-        <img src="/Users/gehrig/Downloads/pic3.jpg" alt="me on a ride">
-        <img src="/Users/gehrig/Downloads/pic6.jpg" alt="flower garden pic">
+        <img src="images/pic3.jpg" alt="me on a ride">
+        <img src="images/pic6.jpg" alt="flower garden pic">
 
       </ul>
       <h3>[about me]</h3>
@@ -152,8 +152,8 @@
         [Written copy for the about me here]
       </p>
       <p>Images for the about me</p>
-        <img src="/Users/gehrig/Downloads/pic4.jpg" alt="temple pic">
-        <img src="/Users/gehrig/Downloads/pic5.jpg" alt="suit pic">
+        <img src="images/pic4.jpg" alt="temple pic">
+        <img src="images/pic5.jpg" alt="suit pic">
 
       </ul>
       <hr>
@@ -167,19 +167,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="https://wireframe.cc/JjweKf" alt="home page wireframe">
 
       <h3>[resume]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="https://wireframe.cc/JjweKf" alt="page 2 wireframe">
 
       <h3>[about me]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="https://wireframe.cc/ufgwxS" alt="page 3 wireframe">
     </main>
   </body>
 
