added CSS for second page

--- a/resume/contact-me.html
+++ b/resume/contact-me.html
@@ -23,11 +23,19 @@
             <section class="infome">
                 <img src="images/pic1.jpg" alt="me in thailand">
                 <h2>My Contact Information</h2>
-                <p>Phone: 801-574-5756
+                <p>
+                    Phone: 801-574-5756
+                </p>
+                <p>
                     Email: garhog101@gmail.com
-                    instagram: gehrig.sproul 
-
+                </p>
+                <p>
+                    instagram: gehrig.sproul
+                </p>
+                <p>
                     I am avaible for calls and messages anytime after 5 p.m. 
+                </p>
+                <p>
                     I prefer messages but if I do not respond soon then call me by all means. 
                 </p>
                 <img src="images/pic2.jpg" alt="me smiling with with hat">
