added a few things to make the about me site looke better and then added copies of the pictures for social media in

--- a/resume/about-me.html
+++ b/resume/about-me.html
@@ -21,11 +21,12 @@
         </header>
         <main class="me-grid">
             <section class="infome">
-                <img src="images/pic6.jpg" alt="Me in thailand">
-                <h2>About me</h2>
-                <p>Hi my name is Gehrig Sproul. I am studying Business Management and Marketing at BYU in Idaho.  I am looking to own or manage a business in the future and I am wanting experience from from a future job manageing a business or being in management so that I can learn how I am able to do that myself in the future for my own business. 
-                </p>
-                <img src="images/pic3.jpg" alt="Me on Ride">
+                <img src="images/pic6.jpg" alt="Gehrig Sproul in Thailand">
+                <h2>About Me</h2>
+                <p>Hi, my name is Gehrig Sproul. I am currently studying Business Management and Marketing at BYU–Idaho.</p>
+                <p>I have a strong interest in entrepreneurship and aspire to either manage or own a business in the future.</p>
+                <p>Right now, I’m seeking opportunities to gain real-world experience in business management. My goal is to learn valuable skills from future jobs in leadership or management positions so I can confidently run my own business someday.</p>
+                <img src="images/pic3.jpg" alt="Gehrig Sproul on a ride">
             </section>
         </main>
         <footer>
